touches and changes

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <li><a href="#" class="active">N-Queens</a></li>
             <li><a href="others/k.html">Knight's Tour Visualization</a></li>
             <li><a href="others/tree.html" class="active">Binary Tree Search</a></li>
-            <li><a href="#">Maze Solver</a></li>
+            <li><a href="others/r.html">Maze Solver</a></li>
             <li><a href="#">Graph Coloring</a></li>
-            <li><a href="#">Subset Sum</a></li>
+            <li><a href="others/s.html">Subset Sum</a></li>
             <li><a href="others/h.html">Hamiltonian Cycle</a></li>
         </ul>
     </nav>
