--- a/others/k.html
+++ b/others/k.html
@@ -283,11 +283,11 @@ h1 {
             
                 <li><a href="#">Home</a></li>
                 <li><a href="\index.html">N-Queens</a></li>
-                <li><a href="others/k.html"  class="active">Knight's Tour Visualization</a></li>
+                <li><a href="k.html"  class="active">Knight's Tour Visualization</a></li>
                 <li><a href="tree.html">Binary Tree Search</a></li>
-                <li><a href="#">Maze Solver</a></li>
+                <li><a href="r.html">Maze Solver</a></li>
                 <li><a href="#">Graph Coloring</a></li>
-                <li><a href="#">Subset Sum</a></li>
+                <li><a href="s.html">Subset Sum</a></li>
                 <li><a href="h.html">Hamiltonian Cycle</a></li>
  
     </ul>
