--- a/others/tree.html
+++ b/others/tree.html
@@ -13,9 +13,9 @@
             <li><a href="\index.html">N-Queens</a></li>
             <li><a href="k.html">Knight's Tour Visualization</a></li>
             <li><a href="#" class="active">Binary Tree Search</a></li>
-            <li><a href="maze-solver.html">Maze Solver</a></li>
-            <li><a href="graph-coloring.html">Graph Coloring</a></li>
-            <li><a href="subset-sum.html">Subset Sum</a></li>
+            <li><a href="r.html">Maze Solver</a></li>
+            <li><a href="#">Graph Coloring</a></li>
+            <li><a href="s.html">Subset Sum</a></li>
             <li><a href="h.html">Hamiltonian Cycle</a></li>
         </ul>
     </nav>
