--- a/others/h.html
+++ b/others/h.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#" class="active">N-Queens</a></li>
+            <li><a href="k.html">Knight's Tour Visualization</a></li>
+            <li><a href="tree.html" class="active">Binary Tree Search</a></li>
+            <li><a href="r.html">Maze Solver</a></li>
+            <li><a href="#">Graph Coloring</a></li>
+            <li><a href="s.html">Subset Sum</a></li>
+            <li><a href="h.html">Hamiltonian Cycle</a></li>
+        </ul>
+    </nav>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Hamiltonian Cycle Visualization</title>
@@ -13,6 +25,48 @@
             background-color: #f0f0f0;
             padding: 20px;
         }
+        
+nav {
+    background-color: #333;
+    padding: 10px 0;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    transition: color 0.3s;
+}
+
+nav ul li a:hover, nav ul li a.active {
+    color: #4CAF50;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+h1 {
+    color: #333;
+    margin-bottom: 30px;
+}
         canvas {
             border: 2px solid #333;
             border-radius: 10px;
