--- a/others/s.html
+++ b/others/s.html
@@ -22,7 +22,61 @@
             background-color: var(--background-color);
             color: var(--text-color);
         }
+        #navbar {
+    position: sticky;
+    top: 0;
+    background-color: #f0f8ff;
+    z-index: 1000;
+    padding: 10px 0;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
 
+#maze-container {
+    padding-top: 20px;  /* Add some space below the navbar */
+}
+
+        nav {
+    background-color: #333;
+    padding: 10px 0;
+    min-width: 1000px;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    transition: color 0.3s;
+}
+
+nav ul li a:hover, nav ul li a.active {
+    color: #4CAF50;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+h1 {
+    color: #333;
+    margin-bottom: 30px;
+}
         h1 {
             text-align: center;
             color: var(--primary-color);
@@ -106,6 +160,22 @@
             gap: 5px;
         }
     </style>
+    <div id="navbar">
+        <div id="controls">
+            <!-- Existing controls content -->
+        </div>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#" class="active">N-Queens</a></li>
+            <li><a href="k.html">Knight's Tour Visualization</a></li>
+            <li><a href="tree.html" class="active">Binary Tree Search</a></li>
+            <li><a href="r.html">Maze Solver</a></li>
+            <li><a href="#">Graph Coloring</a></li>
+            <li><a href="s.html">Subset Sum</a></li>
+            <li><a href="h.html">Hamiltonian Cycle</a></li>
+        </ul>
+    </div>
+    
 </head>
 <body>
     <h1>Interactive Sum of Subsets Visualization</h1>
