--- a/others/k.html
+++ b/others/k.html
@@ -286,7 +286,7 @@ h1 {
                 <li><a href="k.html"  class="active">Knight's Tour Visualization</a></li>
                 <li><a href="tree.html">Binary Tree Search</a></li>
                 <li><a href="r.html">Maze Solver</a></li>
-                <li><a href="#">Graph Coloring</a></li>
+                <li><a href="g.html">Graph Coloring</a></li>
                 <li><a href="s.html">Subset Sum</a></li>
                 <li><a href="h.html">Hamiltonian Cycle</a></li>
  
