--- a/others/tree.html
+++ b/others/tree.html
@@ -14,7 +14,7 @@
             <li><a href="k.html">Knight's Tour Visualization</a></li>
             <li><a href="#" class="active">Binary Tree Search</a></li>
             <li><a href="r.html">Maze Solver</a></li>
-            <li><a href="#">Graph Coloring</a></li>
+            <li><a href="g.html">Graph Coloring</a></li>
             <li><a href="s.html">Subset Sum</a></li>
             <li><a href="h.html">Hamiltonian Cycle</a></li>
         </ul>
