--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="others/k.html">Knight's Tour Visualization</a></li>
             <li><a href="others/tree.html" class="active">Binary Tree Search</a></li>
             <li><a href="others/r.html">Maze Solver</a></li>
-            <li><a href="#">Graph Coloring</a></li>
+            <li><a href="others/g.html">Graph Coloring</a></li>
             <li><a href="others/s.html">Subset Sum</a></li>
             <li><a href="others/h.html">Hamiltonian Cycle</a></li>
         </ul>
