--- a/others/r.html
+++ b/others/r.html
@@ -98,8 +98,147 @@
             height: 20px;
             border-radius: 3px;
         }
+        
+    #graph-container {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      max-width: 1200px;
+    }
+
+    #graph {
+      width: 70%;
+      height: 600px;
+      border: 1px solid #ccc;
+    }
+
+    #sidebar {
+      width: 28%;
+      padding: 10px;
+      border-radius: 4px;
+      background-color: #f5f5f5;
+    }
+
+    #adjacency-matrix {
+      margin-top: 20px;
+    }
+
+    #status {
+      margin-top: 20px;
+      font-weight: bold;
+    }
+
+    .node {
+      cursor: pointer;
+    }
+
+    .link {
+      stroke: #999;
+      stroke-opacity: 0.6;
+    }
+
+    /* navbar styling */
+    .navbar {
+      overflow: hidden;
+      background-color: #333;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1;
+    }
+
+    .navbar .navbar-links {
+      display: flex;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      font-weight: bold;
+    }
+
+    .navbar a {
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    .navbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+    .navbar-toggle   
+ {
+      display: none;
+      position: absolute;
+      right: 5px;
+      top: 50%;
+      transform: translateY(-50%);
+      cursor: pointer;
+    }
+
+    .navbar-toggle span {
+      display: block;
+      width: 25px;
+      height: 3px;
+      background-color: white;
+      margin: 5px 0;
+    }
+
+    @media screen and (max-width: 768px) {
+      .navbar a {
+        display: none;
+      }
+
+      .navbar-toggle {
+        display: block;
+      }
+
+      .navbar .navbar-links {
+        flex-direction: column;
+      }
+
+      .navbar a:not(:first-child) {
+        display: block;
+      }
+    }
+        #controls {
+            margin-bottom: 20px;
+        }
+        button {
+            margin-right: 10px;
+            padding: 5px 10px;
+            height: 50px;
+    width: 140px;
+    font-size: 16px;
+    background-color: #3498db;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.2s;
+    border: none;
+        }
     </style>
 </head>
+<nav class="navbar">
+    <ul class="navbar-links">
+
+            
+                <li><a href="#">Home</a></li>
+                <li><a href="\index.html">N-Queens</a></li>
+                <li><a href="k.html">Knight's Tour Visualization</a></li>
+                <li><a href="tree.html">Binary Tree Search</a></li>
+                <li><a href="r.html"  class="active">Maze Solver</a></li>
+                <li><a href="g.html">Graph Coloring</a></li>
+                <li><a href="s.html">Subset Sum</a></li>
+                <li><a href="h.html">Hamiltonian Cycle</a></li>
+ 
+    </ul>
+   
+   
+</nav>
 <body>
     <div id="maze-container">
         <h1>Advanced Rat in a Maze - Interactive Solver</h1>
