--- a/others/s.html
+++ b/others/s.html
@@ -5,7 +5,104 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Sum of Subsets Visualization</title>
     <style>
-        :root {
+ 
+
+ .navbar {
+        background-color: #120707;
+        position: sticky;
+        top: 0;
+        width: 100%;
+        z-index: 1000;
+        padding: 10px 0;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
+    .navbar ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+
+    .navbar li {
+        float: left;
+    }
+
+    .navbar li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        transition: 0.3s;
+    }
+
+    .navbar li a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+
+    .navbar li a.active {
+        background-color: #3498db;
+        color: white;
+    }
+
+    @media screen and (max-width: 768px) {
+        .navbar li {
+            float: none;
+        }
+        
+        .navbar li a {
+            display: block;
+            text-align: left;
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+      .navbar a {
+        display: none;
+      }
+
+      .navbar-toggle {
+        display: block;
+      }
+
+      .navbar .navbar-links {
+        flex-direction: column;
+      }
+
+      .navbar a:not(:first-child) {
+        display: block;
+      }
+    }
+#maze-container {
+    padding-top: 20px;  /* Add some space below the navbar */
+}
+
+#graph-container {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      max-width: 1200px;
+    }
+
+    #graph {
+      width: 70%;
+      height: 600px;
+      border: 1px solid #ccc;
+    }
+
+    #sidebar {
+      width: 28%;
+      padding: 10px;
+      border-radius: 4px;
+      background-color: #f5f5f5;
+    }
+
+    #adjacency-matrix {
+      margin-top: 20px;
+    }
+    :root {
             --primary-color: #3498db;
             --secondary-color: #2980b9;
             --background-color: #ecf0f1;
@@ -22,47 +119,37 @@
             background-color: var(--background-color);
             color: var(--text-color);
         }
-        #navbar {
-    position: sticky;
-    top: 0;
-    background-color: #f0f8ff;
-    z-index: 1000;
-    padding: 10px 0;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-}
 
-#maze-container {
-    padding-top: 20px;  /* Add some space below the navbar */
-}
+        .link {
+      stroke: #999;
+      stroke-opacity: 0.6;
+    }
+    #status {
+      margin-top: 20px;
+      font-weight: bold;
+    }
 
-        nav {
-    background-color: #333;
-    padding: 10px 0;
-    min-width: 1000px;
-}
+    .node {
+      cursor: pointer;
+    }
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-}
-
-nav ul li {
-    margin: 0 15px;
-}
-
-nav ul li a {
+  
+        #controls {
+            margin-bottom: 20px;
+        }
+        button {
+            margin-right: 10px;
+            padding: 5px 10px;
+            height: 50px;
+    width: 140px;
+    font-size: 16px;
+    background-color: #3498db;
     color: white;
-    text-decoration: none;
-    font-size: 18px;
-    transition: color 0.3s;
-}
-
-nav ul li a:hover, nav ul li a.active {
-    color: #4CAF50;
-}
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.2s;
+    border: none;
+        }
 
 main {
     display: flex;
@@ -160,21 +247,18 @@ h1 {
             gap: 5px;
         }
     </style>
-    <div id="navbar">
-        <div id="controls">
-            <!-- Existing controls content -->
-        </div>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#" class="active">N-Queens</a></li>
-            <li><a href="k.html">Knight's Tour Visualization</a></li>
-            <li><a href="tree.html" class="active">Binary Tree Search</a></li>
-            <li><a href="r.html">Maze Solver</a></li>
-            <li><a href="#">Graph Coloring</a></li>
-            <li><a href="s.html">Subset Sum</a></li>
-            <li><a href="h.html">Hamiltonian Cycle</a></li>
-        </ul>
-    </div>
+  <nav class="navbar">
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">N-Queens</a></li>
+        <li><a href="k.html">Knight's Tour Visualization</a></li>
+        <li><a href="tree.html">Binary Tree Search</a></li>
+        <li><a href="r.html">Maze Solver</a></li>
+        <li><a href="#">Graph Coloring</a></li>
+        <li><a href="s.html" class="active">Subset Sum</a></li>
+        <li><a href="h.html">Hamiltonian Cycle</a></li>
+    </ul>
+</nav>
     
 </head>
 <body>
